# reconengine

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  debug_match_rate.py  pyproject.toml  tasks.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
json_output/: rule_0_output_20250909_125431.json  rule_0_output_20250909_130257.json
src/: __init__.py
src/cme_match/: __init__.py  main.py
src/cme_match/cli/: __init__.py  cme_display.py
src/cme_match/config/: __init__.py  config_manager.py  normalizer_config.json
src/cme_match/core/: __init__.py  cme_pool.py  trade_factory.py
src/cme_match/docs/: rules.md
src/cme_match/loaders/: __init__.py  cme_csv_loader.py
src/cme_match/matchers/: base_matcher.py  exact_matcher.py
src/cme_match/models/: __init__.py  match_result.py  trade.py
src/cme_match/normalizers/: __init__.py  cme_trade_normalizer.py
src/common/: __init__.py
src/common/schemas/: __init__.py  input_schemas.py
src/eex_match/: __init__.py  main.py
src/energy_match/: main.py
src/ice_match/: __init__.py  main.py
src/json_input/: ice_sample.json  sgx2_sample.json  sgx_sample.json
src/sgx_match/: __init__.py  main.py
src/test_json/: output.json  sample_full.json
src/unified_recon/: __init__.py  main.py  server.py
tradefiles/: DealReport 27062025.csv  dealreportparser.py  docs.md  fo_parser.py  ice_dealreportparser.py  ice_parser.py  mapping.json  sgx_parser.py  sgx_reportparser.py  sourceExchange.csv
tradefiles/input/: DealReport 25062025.csv
tradefiles/output/: sourceExchange.csv
(+168 files in other folders)
