[project]
name = "matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.5",
]


[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
